--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://localhost:3306/tododb?serverTimezone=Asia/Ho_Chi_Minh&zeroDateTimeBehavior=convertToNull
-# spring.datasource.username=root
-# spring.datasource.password=
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/H082RPBsee?serverTimezone=Asia/Ho_Chi_Minh&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=H082RPBsee
-spring.datasource.password=vfjwFlgO9w
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb?serverTimezone=Asia/Ho_Chi_Minh&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=
+# spring.datasource.url=jdbc:mysql://remotemysql.com:3306/H082RPBsee?serverTimezone=Asia/Ho_Chi_Minh&zeroDateTimeBehavior=convertToNull
+# spring.datasource.username=H082RPBsee
+# spring.datasource.password=vfjwFlgO9w
 
 
 spring.jpa.show-sql=true
