--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.password=vfjwFlgO9w
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.thymeleaf.cache=false
